[package]
name = "llm-hub"
version = "0.1.0"
edition = "2021"
description = "A local LLM proxy that routes requests to multiple backends by model name."
license = "MIT"

[[bin]]
name = "llm-hub"
path = "src/main.rs"

[dependencies]
# Web framework (0.8: path syntax /{param}, Body::from_stream)
axum = "0.8"

# HTTP client with rustls TLS (0.13: rustls is the TLS backend)
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "rustls",
] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Platform config path
dirs = "6"

# Errors
thiserror = "2"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
